manifests/monitoring/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: letsencrypt
  routes:
    - match: Host(`grafana.boukingolts.art`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
